--- a/sass/framework/_forms.scss
+++ b/sass/framework/_forms.scss
@@ -1,7 +1,7 @@
 /**
  * Forms
  *
- * @author magnify
+ * @author magnify, zorp
  */
 
 
@@ -25,7 +25,6 @@ select {
 
   border: 1px solid $gray;
   height: 35px;
-  line-height: 35px;
   padding: 7px;
 }
 
